fix: Improve ID card generation error handling and logging
- Backend: Added detailed logging and try-catch block in IdCardController
- Frontend: Improved error message display to users
- Fixed potential 500 errors by handling exceptions properly

--- a/apps/api/.env
+++ b/apps/api/.env
@@ -23,13 +23,13 @@ MPESA_ENV=sandbox
 MPESA_CALLBACK_URL=http://localhost:3001/api/mpesa/callback
 
 # SMTP Configuration
-SMTP_HOST=mail.mclinic.co.ke
+SMTP_HOST=mail.kkdes.co.ke
 SMTP_PORT=587
-SMTP_USER=info@mclinic.co.ke
-SMTP_PASS=Digital2025
+SMTP_USER=info@kkdes.co.ke
+SMTP_PASS=KKAdminK@2025
 SMTP_SECURE=false
 SMTP_FROM_NAME=M-Clinic Health
-SMTP_FROM_EMAIL=info@mclinic.co.ke
+SMTP_FROM_EMAIL=info@kkdes.co.ke
 
 # Frontend URL
 FRONTEND_URL=http://localhost:3000
