--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
     "react": "19.2.3",
     "react-dom": "19.2.3",
