fix: Update all database references from 'mclinic' to 'mclinicportal'

--- a/server.env.template
+++ b/server.env.template
@@ -7,7 +7,7 @@ DB_HOST=localhost
 DB_PORT=3306
 DB_USER=m-cl-app
 DB_PASSWORD=Mclinic@App2023?
-DB_NAME=mclinic
+DB_NAME=mclinicportal
 
 # JWT Authentication
 JWT_SECRET=MCL_PROD_SECURE_RANDOM_KEY_2025_CHANGE_THIS_TO_SOMETHING_VERY_LONG_AND_RANDOM
